test/tests/stages/18_structures/invalid_parse/var_decl_bad_tag_1.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[14]:
  int
  identifier(main)
  (
  void
  )
  {
  struct
  const int(4)
  identifier(foo)
  ;
  return
  const int(0)
  ;
  }
